tests/good/58/test.scm
(if (= 3 3) (let ((a 1)) (define a 3) a) (let ((b 2)) (define x 500) x))