tests/bad/32/test.scm
(if (define x 1) 2 3)